--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-happy-tree_74787
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74787-h/images/cover.jpg
 creator:
   author:
     agent_name: Murray, Rosalind
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/57644
     wikipedia: https://en.wikipedia.org/wiki/Rosalind_Murray
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74787#The-happy-tree
 gutenberg_issued: '2024-11-23'
 gutenberg_type: Text
 identifiers:
